--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -37,6 +37,7 @@
     <dimen name="search_load_more_margin">10dp</dimen>
 
     <!--Global Menu-->
+    <dimen name="global_menu_list_width">265dp</dimen>
     <dimen name="global_menu_list_height">44dp</dimen>
     <dimen name="global_menu_list_right_arrow_icon_size">30dp</dimen>
     <dimen name="global_menu_list_item_default_title_left_margin">16dp</dimen>
