--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -108,8 +108,10 @@
     <drawable name="color_little_gray">#E5E5E5</drawable>
     <color name="remote_watch_by_tv_bottom_corners_dtv">#D3052C</color>
     <color name="remote_watch_by_tv_bottom_corners_d_anime">#DD5e30</color>
+    <color name="remote_watch_by_tv_bottom_corners_dazn">#FFFFFF</color>
     <color name="remote_watch_by_tv_bottom_corners_dtvchannel_and_hikari">#00A2E6</color>
     <color name="remote_controller_background">#F5F5F5</color>
+    <color name="remote_watch_by_tv_bottom_dazn_text">#0C161C</color>
     <!--//チャンネルリスト-->
     <color name="list_view_divider">#333333</color>
 
