--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -71,7 +71,7 @@
                             android:layout_marginEnd="24dp"
                             android:layout_centerVertical="true"
                             android:contentDescription="@null"
-                            android:src="@mipmap/arrow_top" />
+                            android:src="@mipmap/remote_controller_arrow_top" />
                     </RelativeLayout>
 
                     <RelativeLayout
