DAZNソースをSprint5_2.0にマッジ
Change-Id: I74be35bd3434c17442431aab39d6c4ed08e7ac9d

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -171,6 +171,7 @@
     <dimen name="contents_detail_channel_sub_title_txt_size">15dp</dimen>
     <dimen name="contents_detail_service_icon_label_margin">8dp</dimen>
     <dimen name="contents_detail_service_icon_label_height">20dp</dimen>
+    <dimen name="contents_detail_service_icon_label_dazn_width_height">25dp</dimen>
 
     <!--リモコン -->
     <dimen name="remote_watch_by_tv_bottom_corners">8dp</dimen>
