DREM-3535 [不具合]【Android】おすすめ番組・ビデオの一覧画面ではメインタイトルのフォントが正しくない
Change-Id: Ibf33d7e91f4f908c1cd9354898dcc138b61e63d2

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -152,6 +152,7 @@
                 android:gravity="center|start"
                 android:paddingTop="@dimen/watch_listen_result_content_text_padding_top"
                 android:maxLines="2"
+                android:textStyle="bold"
                 android:textColor="@color/white_text"
                 android:textSize="@dimen/watch_listen_result_content_title" />
 
