--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
@@ -27,6 +27,7 @@
 		android:ellipsize="end"
 		android:gravity="center_vertical"
 		android:maxLines="2"
+		android:textStyle="bold"
 		android:textColor="@color/white_text"
 		android:textSize="@dimen/channel_list_text_size" />
 
