--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
@@ -17,11 +17,13 @@
 		android:visibility="invisible" />
 
 	<TextView
+		android:id="@+id/fragment_search_result_line"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/search_result_list_border_height"
 		android:layout_below="@+id/tv_searched_result"
 		android:layout_marginLeft="@dimen/watch_listen_thumbnail_margin_left"
-		android:background="@color/setting_list_divider_color"/>
+		android:background="@color/setting_list_divider_color"
+		android:visibility="invisible" />
 
 	<TextView
 		android:id="@+id/search_list_no_items"
@@ -58,15 +60,4 @@
 		android:divider="@drawable/list_item_divider"
 		android:dividerHeight="@dimen/search_result_list_border_height">
 	</ListView>
-
-	<!-- 201804対応
-	<Button
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentRight="true"
-		android:layout_marginBottom="30dp"
-		android:layout_marginRight="30dp"/>
-		-->
-
 </RelativeLayout>
