DREM-4831 ＜AOS＞クリップボタン・録画ボタン・ダウンロードボタンのタップエリアの定義変更
Change-Id: I516812b0d45da8947fa67240f65f8829013e9b23

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -73,8 +73,7 @@
                 android:clickable="true"
                 android:layout_marginStart="@dimen/watch_listen_rating_margin_top"
                 android:layout_marginEnd="@dimen/watch_listen_text_size"
-                android:background="@color/list_item_background" />
-
+                android:padding="@dimen/item_common_clip_button_padding" />
             <TextView
                 android:id="@+id/item_common_result_recording_reservation_status"
                 android:layout_width="@dimen/recording_reservation_list_status_width"
