--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -116,10 +116,10 @@
                         android:layout_width="@dimen/contents_detail_icon_size"
                         android:layout_height="@dimen/contents_detail_icon_size"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginEnd="@dimen/contents_detail_icon_margin"
                         android:layout_weight="1"
+                        android:padding="@dimen/contents_detail_icon_padding"
                         android:contentDescription="@null"
-                        android:scaleType="fitXY"
+                        android:scaleType="fitCenter"
                         android:visibility="gone" />
 
                     <ImageView
@@ -127,12 +127,13 @@
                         android:layout_width="@dimen/contents_detail_icon_size"
                         android:layout_height="@dimen/contents_detail_icon_size"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginEnd="@dimen/contents_detail_clip_margin"
                         android:layout_weight="1"
+                        android:padding="@dimen/contents_detail_icon_padding"
+                        android:layout_marginEnd="@dimen/contents_detail_icon_padding"
                         android:clickable="true"
                         android:contentDescription="@null"
                         android:gravity="center_vertical"
-                        android:scaleType="fitXY"
+                        android:scaleType="fitCenter"
                         android:visibility="gone" />
                 </LinearLayout>
             </RelativeLayout>
