DREM-4924 ・コンテンツ詳細にコピーライト表示対応 ・グローバルメニューのｄアニメストアのコピーライトを削除 Change-Id: Iadbe1d48ed21105a3d3ce28c16137c68fdabe15b :

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -125,6 +125,7 @@
     <dimen name="contents_detail_contents_text_size">14dp</dimen>
     <dimen name="contents_detail_staff_text_size">15dp</dimen>
     <dimen name="contents_detail_staff_margin_top">16dp</dimen>
+    <dimen name="contents_detail_copyright_text_size">11dp</dimen>
     <dimen name="contents_detail_icon_size">36dp</dimen>
     <dimen name="contents_detail_icon_margin">8dp</dimen>
     <dimen name="contents_detail_staff_margin">32dp</dimen>
