DREM-5010 <AOS> ペアリング導線の改善(既存画面変更)★
Change-Id: I745e1dad101f8e28a36df2d00e924c3dbcbefb31

--- a/dTVTerminalApp/app/src/main/assets/pairing_help/css/bundle.css
+++ b/dTVTerminalApp/app/src/main/assets/pairing_help/css/bundle.css
@@ -99,13 +99,16 @@ a:link {
           transform: rotate(315deg);
 }
 .ListLabel {
-  margin: 24px 0 0 16px;
+  margin: 40px 0 0 16px;
   padding-bottom: 10px;
   border-bottom: 1px solid #333;
-  color: #ccc;
+  color: #999;
   font-size: 12px;
   font-weight: bold;
   line-height: 14px;
+}
+.ListLabel:first-of-type {
+  margin-top: 24px;
 }
 .ShoulderTitle {
   margin-bottom: 8px;
