--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
@@ -1,97 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     android:background="@color/stb_select_background_color">
 
-    <RelativeLayout
-        android:id="@+id/stb_icon_relative_layout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_relative_layout_high_size">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
         <ImageView
-             android:id="@+id/paring_search_image"
-             android:layout_width="@dimen/launch_stb_start_up_icon1_width"
-             android:layout_height="@dimen/launch_stb_start_up_icon1_high"
-             android:src="@mipmap/startup_icon_04"
-             android:layout_alignParentBottom="true"
-             android:layout_centerHorizontal="true"
-             android:layout_marginBottom="@dimen/launch_image_bottom_margin"/>
-    </RelativeLayout>
+            android:id="@+id/paring_search_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/launch_stb_icon_margin_top_size"
+            android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+            android:src="@mipmap/startup_icon_04" />
 
-    <TextView
-        android:id="@+id/d_account_not_registration_message"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_stb_paring_result_layout"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="@dimen/launch_stb_text_margin_top"
-        android:lineSpacingMultiplier="1.5"
-        android:layout_below="@+id/stb_icon_relative_layout"
-        android:gravity="center"
-        android:text="@string/str_stb_not_registration_account_message"
-        android:textColor="@color/stb_select_white_color"
-        android:textSize="@dimen/launch_text_size" />
+        <TextView
+            android:id="@+id/d_account_not_registration_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:lineSpacingMultiplier="1.5"
+            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+            android:text="@string/str_stb_not_registration_account_message"
+            android:textColor="@color/stb_select_white_color"
+            android:textSize="@dimen/launch_text_size" />
 
-    <TextView
-        android:id="@+id/d_account_registration_help"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_text_layout_high_size"
-        android:layout_below="@id/d_account_not_registration_message"
-        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
-        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:layout_marginTop="@dimen/launch_stb_account_error_margin_top"
-        android:background="@color/stb_select_white_color"
-        android:gravity="center"
-        android:textSize="@dimen/launch_text_size"
-        android:textStyle="bold"
-        android:text="@string/str_stb_d_account_registration_help"
-        android:textColor="@color/stb_select_black_color" />
 
-    <TextView
-        android:id="@+id/d_account_input_activation_code"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_text_layout_high_size"
-        android:layout_below="@id/d_account_registration_help"
-        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
-        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:layout_marginTop="@dimen/launch_text_bottom_margin"
-        android:background="@color/stb_select_white_color"
-        android:gravity="center"
-        android:textSize="@dimen/launch_text_size"
-        android:textStyle="bold"
-        android:text="@string/str_stb_input_activation_code"
-        android:textColor="@color/stb_select_black_color" />
+        <TextView
+            android:id="@+id/d_account_registration_help"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/launch_text_layout_high_size"
+            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+            android:layout_marginTop="@dimen/launch_stb_account_error_margin_top"
+            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+            android:background="@color/stb_select_white_color"
+            android:gravity="center"
+            android:text="@string/str_stb_d_account_registration_help"
+            android:textColor="@color/stb_select_black_color"
+            android:textSize="@dimen/launch_text_size"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/d_account_again_pairing"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_text_layout_high_size"
-        android:layout_below="@id/d_account_input_activation_code"
-        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
-        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:layout_marginTop="@dimen/launch_text_bottom_margin"
-        android:background="@color/stb_select_white_color"
-        android:gravity="center"
-        android:textSize="@dimen/launch_text_size"
-        android:textStyle="bold"
-        android:text="@string/str_stb_again_pairing"
-        android:textColor="@color/list_item_background" />
+        <TextView
+            android:id="@+id/d_account_input_activation_code"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/launch_text_layout_high_size"
+            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+            android:layout_marginTop="@dimen/launch_text_bottom_margin"
+            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+            android:background="@color/stb_select_white_color"
+            android:gravity="center"
+            android:text="@string/str_stb_input_activation_code"
+            android:textColor="@color/stb_select_black_color"
+            android:textSize="@dimen/launch_text_size"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/d_account_login_other_account"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_text_layout_high_size"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
-        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:background="@color/stb_select_white_color"
-        android:gravity="center"
-        android:textSize="@dimen/launch_text_size"
-        android:textStyle="bold"
-        android:text="@string/str_stb_login_other_account"
-        android:textColor="@color/stb_select_black_color"
-        android:layout_marginBottom="@dimen/launch_image_bottom_margin"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/d_account_again_pairing"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/launch_text_layout_high_size"
+            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+            android:layout_marginTop="@dimen/launch_text_bottom_margin"
+            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+            android:background="@color/stb_select_white_color"
+            android:gravity="center"
+            android:text="@string/str_stb_again_pairing"
+            android:textColor="@color/list_item_background"
+            android:textSize="@dimen/launch_text_size"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="bottom"
+            android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+            android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+            android:layout_marginTop="@dimen/launch_text_bottom_margin"
+            android:layout_marginBottom="@dimen/launch_image_bottom_margin">
+
+            <TextView
+                android:id="@+id/d_account_login_other_account"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/launch_text_layout_high_size"
+                android:background="@color/stb_select_white_color"
+                android:gravity="center"
+                android:text="@string/str_stb_login_other_account"
+                android:textColor="@color/stb_select_black_color"
+                android:textSize="@dimen/launch_text_size"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
