--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
@@ -8,29 +8,24 @@
     android:background="@color/stb_select_background_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_relative_layout_high_size"
-        android:id="@+id/stb_icon_relative_layout">
-        <ImageView
-            android:id="@+id/paring_connecting_image"
-            android:layout_width="@dimen/launch_stb_start_up_icon3_width"
-            android:layout_height="@dimen/launch_stb_start_up_icon2_high"
-            android:src="@mipmap/startup_icon_03"
-            android:baselineAlignBottom="true"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/launch_image_bottom_margin" />
 
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/paring_connecting_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/launch_stb_icon_margin_top_size"
+        android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+        android:baselineAlignBottom="true"
+        android:src="@mipmap/startup_icon_03" />
     <TextView
         android:id="@+id/connect_result_text"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_stb_paring_result_layout"
+        android:layout_height="wrap_content"
         android:text="@string/str_stb_connect_success_text"
         android:textColor="@color/stb_select_white_color"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
-        android:layout_below="@+id/stb_icon_relative_layout"
+        android:layout_below="@+id/paring_connecting_image"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
