--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_d_account_induction_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_d_account_induction_layout.xml
@@ -8,35 +8,29 @@
     android:layout_height="match_parent"
     android:background="@color/stb_select_background_color">
 
-    <RelativeLayout
-        android:id="@+id/stb_icon_relative_layout_induction"
-        android:layout_width="match_parent"
-        android:gravity="center|bottom"
-        android:layout_height="@dimen/launch_relative_layout_high_size">
+    <ImageView
+        android:id="@+id/paring_search_image_induction"
+        android:layout_width="@dimen/launch_stb_start_up_icon2_width"
+        android:layout_height="@dimen/launch_stb_start_up_icon2_high"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/launch_stb_icon_margin_top_size"
+        android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+        android:baselineAlignBottom="true"
+        android:src="@mipmap/startup_icon_02" />
 
-        <ImageView
-            android:id="@+id/paring_search_image_induction"
-            android:layout_width="@dimen/launch_stb_start_up_icon2_width"
-            android:layout_height="@dimen/launch_stb_start_up_icon2_high"
-            android:layout_marginBottom="@dimen/paring_setting_search_image_margin_top"
-            android:baselineAlignBottom="true"
-            android:src="@mipmap/startup_icon_02"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-
-    </RelativeLayout>
     <TextView
         android:id="@+id/stb_select_status_error_text_induction"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_stb_paring_result_layout"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
         android:text="@string/str_d_account_app_not_install"
         android:textColor="@color/stb_select_white_color"
         android:lineSpacingMultiplier="1.5"
         android:gravity="center"
-        android:layout_marginTop="@dimen/launch_stb_text_margin_top"
         android:textStyle="bold"
         android:textSize="@dimen/launch_text_size"
-        android:layout_below="@+id/stb_icon_relative_layout_induction"
+        android:layout_below="@+id/paring_search_image_induction"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -60,14 +54,12 @@
         android:layout_height="@dimen/launch_text_layout_high_size"
         android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:background="@color/stb_select_white_color"
         android:gravity="center"
-        android:textStyle="bold"
-        android:text="@string/str_stb_no_login_use_text"
-        android:textColor="@color/stb_select_black_color"
+        android:text="@string/str_stb_to_set_later_text"
+        android:textColor="@color/stb_select_white_color"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textSize="14dp"
+        android:textSize="@dimen/launch_text_size"
         android:layout_marginBottom="@dimen/launch_image_bottom_margin"/>
 
 </RelativeLayout>
