--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_device_list_setting.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_device_list_setting.xml
@@ -9,26 +9,20 @@
     android:background="@color/common_background_color"
     android:id="@+id/stb_device_list_relative_layout">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_relative_layout_high_size"
-        android:id="@+id/stb_icon_relative_layout_setting"
-        android:visibility="gone">
-        <ImageView
-            android:id="@+id/paring_search_image_setting"
-            android:layout_width="@dimen/launch_stb_start_up_icon1_width"
-            android:layout_height="@dimen/launch_stb_start_up_icon1_high"
-            android:src="@mipmap/startup_icon_01"
-            android:baselineAlignBottom="true"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/launch_image_bottom_margin" />
+    <ImageView
+        android:id="@+id/paring_search_image_setting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/launch_stb_icon_margin_top_size"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+        android:src="@mipmap/startup_icon_01"
+        android:visibility="gone" />
 
-    </RelativeLayout>
     <TextView
         android:id="@+id/stb_select_status_text_setting"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_stb_paring_result_layout"
+        android:layout_height="wrap_content"
         android:text="@string/str_stb_pairing"
         android:textColor="@color/stb_select_white_color"
         android:layout_marginStart="@dimen/launch_image_bottom_margin"
@@ -37,7 +31,7 @@
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
         android:layout_marginTop="@dimen/launch_stb_text_margin_top"
-        android:layout_below="@+id/stb_icon_relative_layout_setting"
+        android:layout_below="@+id/paring_search_image_setting"
         android:layout_alignParentStart="true"
         android:visibility="gone"/>
 
@@ -111,7 +105,8 @@
     <TextView
         android:id="@+id/stb_device_search_result"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/pairing_setting_search_failed_text_size"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/paring_setting_search_result_margin_top"
         android:textSize="@dimen/launch_text_size"
         android:layout_below="@+id/paring_device_select_setting_divider2"
         android:gravity="bottom"
@@ -154,7 +149,7 @@
         android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:textStyle="bold"
-        android:text="@string/str_stb_no_pair_use_text"
+        android:text="@string/str_stb_paring_cancel_text"
         android:textColor="@color/stb_select_black_color"
         android:textSize="@dimen/launch_text_size"
         android:layout_alignParentBottom="true"
