--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
@@ -4,35 +4,42 @@
     android:background="@color/stb_select_background_color"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_relative_layout_high_size"
-        android:id="@+id/stb_icon_relative_layout">
-        <ImageView
-            android:id="@+id/paring_search_image"
-            android:layout_width="@dimen/launch_stb_start_up_icon1_width"
-            android:layout_height="@dimen/launch_stb_start_up_icon1_high"
-            android:src="@mipmap/startup_icon_01"
-            android:baselineAlignBottom="true"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/launch_image_bottom_margin" />
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/paring_search_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/launch_stb_icon_margin_top_size"
+        android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+        android:src="@mipmap/startup_icon_01" />
 
     <TextView
         android:id="@+id/stb_select_status_text"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_stb_paring_result_layout"
+        android:layout_height="wrap_content"
         android:text="@string/str_stb_select_result_text_search"
         android:textColor="@color/stb_select_white_color"
+        android:lineSpacingMultiplier="1.5"
+        android:gravity="center_horizontal"
         android:layout_marginStart="@dimen/launch_image_bottom_margin"
         android:layout_marginEnd="@dimen/launch_image_bottom_margin"
-        android:lineSpacingMultiplier="1.5"
-        android:gravity="center_horizontal|bottom"
+        android:layout_below="@+id/paring_search_image"
         android:textStyle="bold"
         android:textSize="@dimen/launch_text_size"
-        android:layout_below="@+id/stb_icon_relative_layout"
         android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/stb_select_latency_text"
+        android:layout_below="@+id/stb_select_status_text"
+        android:text="@string/launch_stb_select_latency_text"
+        android:textColor="@color/stb_select_white_color"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+        android:layout_marginTop="@dimen/launch_stb_paring_wifi_check_margin_top"
+        android:gravity="center"
+        android:textSize="@dimen/launch_text_size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <ProgressBar
         android:id="@+id/stb_device_progress"
@@ -40,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/launch_stb_progress_bar_margin_top"
-        android:layout_below="@+id/stb_select_status_text"
+        android:layout_below="@+id/stb_select_latency_text"
         android:layout_centerHorizontal="true" />
 
     <ListView
@@ -49,53 +56,23 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/launch_stb_margin_top"
         android:layout_below="@id/stb_device_progress"
-        android:layout_above="@+id/checkBoxSTBSelectActivity"
+        android:layout_above="@+id/useWithoutPairingButton"
         android:dividerHeight="@dimen/launch_device_list_dividerHeight"
         android:divider="@color/stb_select_background_color">
     </ListView>
 
-    <CheckBox
-        android:id="@+id/checkBoxSTBSelectActivity"
-        android:layout_width="@dimen/launch_stb_checkbox_high"
-        android:layout_height="@dimen/launch_stb_checkbox_high"
-        android:layout_marginStart="@dimen/launch_stb_checkbox_start_margin"
-        android:button="@null"
-        android:background="@drawable/ic_check_box_outline_blank_white_24dp"
-        android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin"
-        android:layout_marginTop="@dimen/launch_stb_checkbox_top_margin"
-        android:paddingStart="@dimen/launch_stb_checkbox_right_margin"
-        android:paddingEnd="@dimen/launch_text_end_padding"
-        android:layout_above="@+id/useWithoutPairingSTBParingInvitation"
-        />
-
     <TextView
-        android:id="@+id/launch_select_check_box_text"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/launch_stb_checkbox_high"
-        android:maxLines="1"
-        android:text="@string/str_stb_next_not_display_text"
-        android:textSize="@dimen/launch_text_size"
-        android:paddingStart="@dimen/launch_stb_checkbox_right_margin"
-        android:paddingEnd="@dimen/launch_text_end_padding"
-        android:gravity="center|start"
-        android:textColor="@color/stb_select_white_color"
-        android:layout_toEndOf="@+id/checkBoxSTBSelectActivity"
-        android:layout_above="@+id/useWithoutPairingSTBParingInvitation"
-        android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin"
-        />
-
-    <TextView
-        android:id="@+id/useWithoutPairingSTBParingInvitation"
+        android:id="@+id/useWithoutPairingButton"
         android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/launch_stb_checkbox_top_margin"
         android:layout_height="@dimen/launch_text_layout_high_size"
         android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
         android:layout_marginBottom="@dimen/launch_image_bottom_margin"
-        android:background="@color/stb_select_white_color"
         android:gravity="center"
-        android:text="@string/str_stb_no_pair_use_text"
-        android:textColor="@color/stb_select_black_color"
-        android:textStyle="bold"
+        android:text="@string/str_stb_to_set_later_text"
+        android:textColor="@color/stb_select_white_color"
+        android:background="@drawable/launch_set_paring_paring_later_corner_button"
         android:textSize="@dimen/launch_text_size"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
