DREM-4739 <AOS> ペアリング導線の改善(新規画面追加)★ DREM-5010 <AOS> ペアリング導線の改善(既存画面変更)★
Change-Id: Ib6d06cde51d15c5541a9757d3f56f814b6fa2763

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/remote_set_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/remote_set_main_layout.xml
@@ -39,6 +39,8 @@
         android:layout_marginTop="@dimen/stb_remote_set_title_margin_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:lineSpacingMultiplier="1.5"
+        android:gravity="center"
         android:text="@string/remote_set_title"
         android:textColor="@color/stb_remote_set_white_color"
         android:textStyle="bold"
