--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_stb_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_stb_main_layout.xml
@@ -24,8 +24,10 @@
         android:id="@+id/launch_stb_main_layout_tv_title"
         android:layout_below="@id/launch_stb_main_layout_iv"
         android:layout_marginTop="@dimen/stb_launch_title_margin_top"
+        android:lineSpacingMultiplier="1.5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/launch_stb_tv_title"
         android:textColor="@color/stb_launch_white_color"
         android:textStyle="bold"
@@ -35,6 +37,7 @@
         android:id="@+id/launch_stb_main_layout_tv_comment"
         android:layout_below="@id/launch_stb_main_layout_tv_title"
         android:layout_marginTop="@dimen/stb_launch_comment_margin_top"
+        android:lineSpacingMultiplier="1.5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/launch_stb_tv_comment"
