DREM-4739 ペアリング導線の改善(新規画面追加) 不具合修正
Change-Id: I2cd8acbf54b06a97d8fce69e5f3cc0b43efe7758

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_stb_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_stb_main_layout.xml
@@ -62,8 +62,8 @@
         android:layout_marginBottom="@dimen/stb_launch_padding_start_end"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/stb_launch_btn_height"
         android:gravity="center"
         android:text="@string/launch_stb_bottom_txt"
         android:textColor="@color/stb_launch_white_color"
