--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_stb_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_stb_main_layout.xml
@@ -2,71 +2,79 @@
 <!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/default_layout_style"
-    android:paddingStart="@dimen/stb_launch_padding_start_end"
-    android:paddingEnd="@dimen/stb_launch_padding_start_end"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/stb_select_background_color">
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/launch_stb_main_layout_iv"
-        android:layout_marginTop="@dimen/stb_launch_image_margin_top"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@null"
-        android:src="@mipmap/startup_icon_07" />
-
-    <TextView
-        android:id="@+id/launch_stb_main_layout_tv_title"
-        android:layout_below="@id/launch_stb_main_layout_iv"
-        android:layout_marginTop="@dimen/stb_launch_title_margin_top"
-        android:lineSpacingMultiplier="1.5"
+    <LinearLayout
+        style="@style/default_layout_style"
+        android:paddingLeft="@dimen/stb_launch_padding_start_end"
+        android:paddingRight="@dimen/stb_launch_padding_start_end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/launch_stb_tv_title"
-        android:textColor="@color/stb_launch_white_color"
-        android:textStyle="bold"
-        android:textSize="@dimen/stb_launch_text_size" />
+        android:background="@color/stb_select_background_color"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/launch_stb_main_layout_tv_comment"
-        android:layout_below="@id/launch_stb_main_layout_tv_title"
-        android:layout_marginTop="@dimen/stb_launch_comment_margin_top"
-        android:lineSpacingMultiplier="1.5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/launch_stb_tv_comment"
-        android:textColor="@color/stb_launch_white_color"
-        android:textSize="@dimen/stb_launch_text_size" />
+        <ImageView
+            android:id="@+id/launch_stb_main_layout_iv"
+            android:layout_marginTop="@dimen/stb_launch_image_margin_top"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@null"
+            android:src="@mipmap/startup_icon_07" />
 
-    <TextView
-        android:id="@+id/launch_stb_main_layout_tv_btn"
-        android:layout_below="@id/launch_stb_main_layout_tv_comment"
-        android:layout_marginTop="@dimen/stb_launch_btn_margin_top"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/stb_launch_btn_height"
-        android:text="@string/launch_stb_bt_txt"
-        android:background="@drawable/startup_btn_normal"
-        android:textColor="@color/stb_launch_black_color"
-        android:textSize="@dimen/stb_launch_text_size"
-        android:textStyle="bold"
-        android:gravity="center"/>
+        <TextView
+            android:id="@+id/launch_stb_main_layout_tv_title"
+            android:layout_marginTop="@dimen/stb_launch_title_margin_top"
+            android:lineSpacingMultiplier="1.5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/launch_stb_tv_title"
+            android:textColor="@color/stb_launch_white_color"
+            android:textStyle="bold"
+            android:textSize="@dimen/stb_launch_text_size" />
 
-    <TextView
-        android:id="@+id/launch_stb_main_layout_tv_link"
-        android:layout_marginBottom="@dimen/stb_launch_padding_start_end"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/stb_launch_btn_height"
-        android:gravity="center"
-        android:text="@string/launch_stb_bottom_txt"
-        android:textColor="@color/stb_launch_white_color"
-        android:autoLink="all"
-        android:textSize="@dimen/stb_launch_text_size" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/launch_stb_main_layout_tv_comment"
+            android:layout_marginTop="@dimen/stb_launch_comment_margin_top"
+            android:lineSpacingMultiplier="1.5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/launch_stb_tv_comment"
+            android:textColor="@color/stb_launch_white_color"
+            android:textSize="@dimen/stb_launch_text_size" />
+
+        <TextView
+            android:id="@+id/launch_stb_main_layout_tv_btn"
+            android:layout_marginTop="@dimen/stb_launch_btn_margin_top"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/stb_launch_btn_height"
+            android:text="@string/launch_stb_bt_txt"
+            android:background="@drawable/startup_btn_normal"
+            android:textColor="@color/stb_launch_black_color"
+            android:textSize="@dimen/stb_launch_text_size"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/stb_launch_padding_start_end">
+
+            <TextView
+                android:id="@+id/launch_stb_main_layout_tv_link"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/stb_launch_btn_height"
+                android:gravity="center"
+                android:layout_alignParentBottom="true"
+                android:text="@string/launch_stb_bottom_txt"
+                android:textColor="@color/stb_launch_white_color"
+                android:autoLink="all"
+                android:textSize="@dimen/stb_launch_text_size" />
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
