--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="launch_stb_checkbox_top_margin">6dp</dimen>
     <dimen name="launch_stb_paring_result_layout">48dp</dimen>
     <dimen name="launch_stb_paring_wifi_check_margin_top">25dp</dimen>
+    <dimen name="launch_stb_select_latency_margin_top">15dp</dimen>
     <dimen name="launch_text_left_padding">24dp</dimen>
     <dimen name="launch_text_right_padding">0dp</dimen>
     <dimen name="launch_text_end_padding">0dp</dimen>
