DREM-5369 [不具合対応](<AOS> ペアリング導線の改善(新規画面追加)★不具合対応
Change-Id: I908f86b25ce496a6bb7e3298cb42e74af4c61539

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -381,6 +381,9 @@
     <dimen name ="stb_launch_comment_margin_top">15dp</dimen>
     <dimen name ="stb_launch_btn_margin_top">32dp</dimen>
     <dimen name ="stb_launch_padding_start_end">16dp</dimen>
+    <dimen name ="stb_launch_padding_all">20dp</dimen>
+    <dimen name="stb_launch_btn_divider_margin_top">1dp</dimen>
+    <dimen name="stb_launch_btn_all_corner_radius">2dp</dimen>
 
     <!--//ペアリング設定（wifi接続状態）-->
     <dimen name ="stb_wifi_set_title_txt_size">14dp</dimen>
