DREM-5771<AOS>ボタンが2行の場合に見切れる端末がある
Change-Id: I39a8c4bc95e807e16359648732a84ab88f5a945d

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
@@ -42,6 +42,7 @@
             android:layout_marginTop="@dimen/launch_stb_account_error_margin_top"
             android:layout_marginRight="@dimen/launch_stb_list_start_margin"
             android:background="@drawable/startup_btn_normal"
+            android:padding="@dimen/launch_stb_door_text_zero_padding_all"
             android:gravity="center"
             android:text="@string/str_stb_d_account_registration_help"
             android:textColor="@color/stb_select_black_color"
@@ -56,6 +57,7 @@
             android:layout_marginTop="@dimen/launch_text_bottom_margin"
             android:layout_marginRight="@dimen/launch_stb_list_start_margin"
             android:background="@drawable/startup_btn_normal"
+            android:padding="@dimen/launch_stb_door_text_zero_padding_all"
             android:gravity="center"
             android:text="@string/str_stb_input_activation_code"
             android:textColor="@color/stb_select_black_color"
@@ -71,6 +73,7 @@
             android:layout_marginTop="@dimen/launch_text_bottom_margin"
             android:layout_marginRight="@dimen/launch_stb_list_start_margin"
             android:background="@drawable/startup_btn_normal"
+            android:padding="@dimen/launch_stb_door_text_zero_padding_all"
             android:gravity="center"
             android:text="@string/str_stb_again_pairing"
             android:textColor="@color/list_item_background"
@@ -92,6 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/launch_text_layout_high_size"
                 android:background="@drawable/startup_btn_normal"
+                android:padding="@dimen/launch_stb_door_text_zero_padding_all"
                 android:gravity="center"
                 android:text="@string/str_stb_login_other_account"
                 android:textColor="@color/stb_select_black_color"
