--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/remote_introduce_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/remote_introduce_main_layout.xml
@@ -124,6 +124,7 @@
                 android:layout_marginEnd="@dimen/stb_remote_introduce_set_set_btn_margin_start_end"
                 android:text="@string/remote_introduce_bt_txt"
                 android:background="@drawable/startup_btn_normal"
+                android:padding="@dimen/launch_stb_door_text_zero_padding_all"
                 android:textColor="@color/stb_remote_introduce_black_color"
                 android:textSize="@dimen/stb_launch_text_size"
                 android:textStyle="bold"
