--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/remote_set_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/remote_set_main_layout.xml
@@ -54,6 +54,7 @@
         android:layout_height="@dimen/stb_remote_set_btn_height"
         android:text="@string/remote_set_bt_txt"
         android:background="@drawable/startup_btn_normal"
+        android:padding="@dimen/launch_stb_door_text_zero_padding_all"
         android:textColor="@color/stb_remote_set_black_color"
         android:textSize="@dimen/stb_remote_text_size"
         android:textStyle="bold"
