--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_device_list_setting.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_device_list_setting.xml
@@ -147,6 +147,7 @@
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
         android:layout_marginBottom="@dimen/launch_image_bottom_margin"
         android:background="@drawable/startup_btn_normal"
+        android:padding="@dimen/launch_stb_door_text_zero_padding_all"
         android:gravity="center"
         android:textStyle="bold"
         android:text="@string/str_stb_paring_cancel_text"
