--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
@@ -56,6 +56,7 @@
             android:layout_marginTop="@dimen/launch_stb_account_error_margin_top"
             android:layout_marginRight="@dimen/launch_stb_list_start_margin"
             android:background="@drawable/startup_btn_normal"
+            android:padding="@dimen/launch_stb_door_text_zero_padding_all"
             android:gravity="center"
             android:text="@string/str_stb_again_pairing"
             android:textColor="@color/stb_launch_black_color"
