--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_wifi_set_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_wifi_set_main_layout.xml
@@ -67,6 +67,7 @@
             android:layout_height="@dimen/stb_wifi_set_btn_height"
             android:text="@string/stb_wifi_set_next_btn_txt"
             android:background="@drawable/startup_btn_normal"
+            android:padding="@dimen/launch_stb_door_text_zero_padding_all"
             android:textColor="@color/stb_wifi_set_black_color"
             android:textSize="@dimen/stb_wifi_set_comment_text_size"
             android:textStyle="bold"
