--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/tutorial_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/tutorial_main_layout.xml
@@ -103,6 +103,7 @@
         android:textColor="#00A2E6"
         android:textStyle="bold"
         android:background="@drawable/startup_btn_normal"
+        android:padding="@dimen/launch_stb_door_text_zero_padding_all"
         android:textSize="@dimen/tutorial_button_text_size"
         android:text="@string/tutorial_agreement_button"
         android:layout_centerHorizontal="true"
