--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -6,7 +6,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/parent_relative_layout"
+    android:id="@+id/item_common_result_parent_layout"
     android:descendantFocusability="blocksDescendants"
     android:layout_marginEnd="@dimen/watch_listen_thumbnail_margin_top_bottom">
 
@@ -31,19 +31,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/item_common_result_thumbnail_iv"
+            <RelativeLayout
+                android:id="@+id/item_common_result_thumbnail_iv_rl"
                 android:layout_width="@dimen/watch_listen_thumbnail_high"
                 android:layout_height="@dimen/watch_listen_thumbnail_width"
                 android:layout_marginStart="@dimen/watch_listen_thumbnail_margin_left"
                 android:layout_marginTop="@dimen/watch_listen_thumbnail_margin_top_bottom"
-                android:layout_marginBottom="@dimen/watch_listen_thumbnail_margin_top_bottom"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:src="@mipmap/loading_list"
-                android:adjustViewBounds="true"
-                android:contentDescription="@null"
-                android:scaleType="fitCenter" />
+                android:layout_marginBottom="@dimen/watch_listen_thumbnail_margin_top_bottom">
+
+                <ImageView
+                    android:id="@+id/item_common_result_thumbnail_iv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:src="@mipmap/loading_list"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@null"
+                    android:scaleType="fitCenter" />
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/item_common_result_rank_num"
@@ -155,6 +161,17 @@
                 android:textColor="@color/white_text"
                 android:textSize="@dimen/watch_listen_result_content_title" />
 
+            <TextView
+                android:id="@+id/item_common_result_dur_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/watch_listen_result_content_rating_margin_top"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/content_time_text"
+                android:textSize="@dimen/list_item_time_text_size"
+                android:visibility="gone"/>
+
             <com.nttdocomo.android.tvterminalapp.view.RatingBarLayout
                 android:id="@+id/item_common_result_content_rating"
                 android:layout_width="wrap_content"
@@ -189,4 +206,45 @@
                 android:scaleType="center" />
         </LinearLayout>
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/item_common_result_episode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/item_common_result_item_rl"
+        android:layout_marginStart="@dimen/watch_listen_thumbnail_margin_left"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/item_common_result_episode_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:textSize="@dimen/contents_detail_episode_txt_size"
+            android:textColor="@color/white_text"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/item_common_result_episode_info_show_all"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/contents_detail_episode_24_dp"
+            android:layout_marginTop="@dimen/contents_detail_episode_8_dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:textSize="@dimen/contents_detail_episode_txt_size"
+            android:text="@string/contents_detail_episode_detail_all_read"
+            android:textColor="@color/white_text"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/item_common_synop_result_line"
+            android:layout_marginTop="@dimen/contents_detail_episode_24_dp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/channel_list_divider_height"
+            android:layout_marginStart="@dimen/watch_listen_thumbnail_margin_left"
+            android:background="@color/setting_list_divider_color"
+            android:visibility="visible"/>
+    </LinearLayout>
 </RelativeLayout>
