DREM-2788 <AOS> コンテンツ詳細画面(他サービス-エピソードタブ)
Change-Id: Ief99bbda9c86f890dd8bad814e0e037dd4213d3d

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -186,6 +186,7 @@
     <dimen name="contents_detail_episode_24_dp">24dp</dimen>
     <dimen name="contents_detail_episode_30_dp">30dp</dimen>
     <dimen name="contents_detail_episode_44_dp">44dp</dimen>
+    <dimen name="contents_detail_episode_all_text_read">56dp</dimen>
 
     <!--リモコン -->
     <dimen name="remote_watch_by_tv_bottom_corners">8dp</dimen>
