--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -228,15 +228,17 @@
         <TextView
             android:id="@+id/item_common_result_episode_info_show_all"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/contents_detail_episode_24_dp"
-            android:layout_marginTop="@dimen/contents_detail_episode_8_dp"
+            android:layout_height="@dimen/contents_detail_episode_all_text_read"
+            android:paddingTop="@dimen/contents_detail_episode_8_dp"
+            android:paddingBottom="@dimen/contents_detail_episode_24_dp"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center"
             android:textSize="@dimen/contents_detail_episode_txt_size"
             android:text="@string/contents_detail_episode_detail_all_read"
             android:textColor="@color/white_text"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:background="@drawable/contents_episode_fragment_background_divider"/>
 
         <TextView
             android:id="@+id/item_common_synop_result_line"
