--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -11,8 +11,6 @@
         android:id="@+id/remote_control_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:background="@android:color/transparent">
 
         <LinearLayout
@@ -31,7 +29,7 @@
                     android:id="@+id/header_watch_by_tv"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:background="@drawable/remote_watch_by_tv_bottom_corner_dtvchannel_and_hikari">
+                    android:background="@mipmap/cast_card_hikari_bg">
 
                     <RelativeLayout
                         android:id="@+id/bottom_view_ll"
@@ -46,7 +44,7 @@
                             android:id="@+id/remote_tv_play_icon"
                             android:layout_width="26dp"
                             android:layout_height="26dp"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="12dp"
                             android:layout_centerVertical="true"
                             android:contentDescription="@null"
                             android:src="@mipmap/tv" />
@@ -56,12 +54,24 @@
                             android:layout_width="wrap_content"
                             android:layout_toEndOf="@id/remote_tv_play_icon"
                             android:layout_height="match_parent"
-                            android:layout_marginStart="14dp"
+                            android:layout_marginStart="10dp"
                             android:gravity="center_vertical"
                             android:text="@string/remote_controller_viewpager_watch_by_tv"
                             android:textStyle="bold"
                             android:textColor="#ffffff"
                             android:textSize="14dp" />
+
+                        <TextView
+                            android:id="@+id/remote_control_status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="15dp"
+                            android:gravity="center_vertical"
+                            android:layout_toStartOf="@+id/remote_controller_down"
+                            android:layout_centerVertical="true"
+                            android:text="@string/remote_controller_viewpager_text_status_none_paring"
+                            android:textColor="#ffffff"
+                            android:textSize="13dp" />
 
                         <ImageView
                             android:id="@+id/remote_controller_down"
