--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -7,7 +7,8 @@
     style="@style/default_layout_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/contents_detail_channel_line_color">
 
     <LinearLayout
         android:id="@+id/contents_detail_scroll_layout"
@@ -96,6 +97,7 @@
             android:layout_marginEnd="@dimen/contents_text_info_margin"
             android:layout_marginTop="@dimen/contents_text_info_margin"
             android:orientation="vertical"
+            android:background="@color/contents_detail_channel_line_color"
             android:visibility="gone">
 
             <TextView
